<resources>
    <string name="app_name">B1lib1li-TV</string>
    <string name="tip_login_success">登录成功！</string>
    <string name="refresh">刷新</string>
    <string name="un_login">未登录</string>
    <string name="tip_un_login">账号未登录或登录已失效!</string>
    <string name="tip_already_logout">登录信息已失效</string>
    <string name="toggle_danmu">弹幕开关</string>
    <string name="resolution">清晰度</string>
    <string name="video_codec">视频编码</string>
    <string name="player">播放器</string>
    <string name="danmu_off">关</string>
    <string name="danmu_on">开</string>
    <string name="danmu_size">弹幕大小</string>
    <string name="tip_modify_danmu_config">下次打开播放页时生效</string>
    <string name="hardware_decoding">硬件解码</string>
    <string name="player_core">播放器内核</string>
    <string name="setting">设置</string>
    <string name="small">小</string>
    <string name="medium">中等</string>
    <string name="large">大</string>
    <string name="x_large">加大</string>
    <string name="xx_large">加大</string>
    <string name="etc">其它</string>
    <string name="relaunch">重启App</string>
    <string name="pre_key_media_player">pre_key_media_player</string>
    <string name="pre_key_hardware_decoding">pre_key_hardware_decoding</string>
    <string name="pre_key_relaunch">pre_key_relaunch</string>
    <string name="pre_key_danmu_size">pre_key_danmu_size</string>
    <string name="pre_key_danmu_toggle">pre_key_danmu_toggle</string>
    <string name="player_about">播放器相关</string>
    <string name="pre_key_codecs">pre_key_codecs</string>
    <string name="pre_key_video_id">pre_key_video_id</string>
    <string name="pre_key_dynamic_span_count">pre_key_dynamic_span_count</string>
    <string name="general">基本</string>
    <string name="use_av1">请求AV1编码</string>
    <string name="pre_key_use_av1">pre_key_use_av1</string>
    <string name="pre_key_enable_debug_view">pre_key_enable_debug_view</string>
    <string name="debug_view">调试信息</string>
    <string name="pre_key_check_update">pre_key_check_update</string>
    <string name="check_update">检查更新</string>
    <string name="auto_check_update">自动检查更新</string>
    <string name="pre_key_auto_check_update">pre_key_auto_check_update</string>
    <string name="no_upgrade_info">已经是最新咯!</string>
    <string name="add_like">点赞</string>
    <string name="add_coin">投币</string>
    <string name="add_favour">收藏</string>
    <string name="action_triple">一键三连</string>
    <string name="is_liked">已点赞</string>
    <string name="is_add_coin">已投币</string>
    <string name="is_add_favour">已收藏</string>
    <string name="dynamic">动态</string>
    <string name="relation_follow">关注</string>
    <string name="favour">收藏</string>
    <string name="to_view">待播</string>
    <string name="pre_key_check_update_date">pre_key_check_update_date</string>
</resources>