<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/xui_config_color_50_pure_black"
    android:orientation="vertical"
    android:padding="@dimen/dp_10">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="135dp"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:text="@string/toggle_danmu"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.github.log2c.b1lib1li_tv.widget.LocalFlowTagLayout
            android:id="@+id/flow_danmu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:nextFocusDown="@id/flow_resolution"
            app:ftl_check_mode="single"
            app:ftl_entries="@array/danmu_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textView"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="135dp"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:text="@string/resolution"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.github.log2c.b1lib1li_tv.widget.LocalFlowTagLayout
            android:id="@+id/flow_resolution"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:nextFocusDown="@id/flow_codec"
            app:ftl_check_mode="single"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textView1"
            app:layout_constraintTop_toTopOf="parent"
            tools:ftl_entries="@array/danmu_toggle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_10">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="135dp"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:text="@string/video_codec"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.github.log2c.b1lib1li_tv.widget.LocalFlowTagLayout
            android:id="@+id/flow_codec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:ftl_check_mode="single"
            app:ftl_entries="@array/video_codec"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textView2"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>